--- a/index.html
+++ b/index.html
@@ -5,13 +5,70 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recipes</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-      <li><a href="recipes/salad.html">Tropical Turkey Salad Recipe</a></li>
-      <li><a href="recipes/snowball.html">SnowBall</a></li>
-      <li><a href="recipes/potatosoup.html">Baked Potato Soup</a></li>
-    </ul>
+    <h1 class="title">Odin Recipes</h1>
+    <main class="container">
+      <figure>
+        <a href="recipes/salad.html"
+          ><img
+            src="../img/salad.jpg"
+            alt="Tropical Turkey Salad"
+            width="960"
+            height="960"
+            class="fig-img"
+        /></a>
+        <figcaption class="caption">Tropical Turkey Salad Recipe</figcaption>
+      </figure>
+
+      <figure>
+        <a href="recipes/snowball.html"
+          ><img
+            src="../img/snowball.jpg"
+            alt="SnowBall"
+            width="3024"
+            height="3024"
+            class="fig-img"
+        /></a>
+        <figcaption class="caption">SnowBall Recipe</figcaption>
+      </figure>
+
+      <figure>
+        <a href="recipes/potatosoup.html"
+          ><img
+            src="../img/potatosoup.jpg"
+            alt="Baked Potato Soup"
+            width="3024"
+            height="3024"
+            class="fig-img"
+        /></a>
+        <figcaption class="caption">Baked Potato Soup</figcaption>
+      </figure>
+
+      <figure>
+        <a href="recipes/potatosoup.html"
+          ><img
+            src="../img/potatosoup.jpg"
+            alt="Baked Potato Soup"
+            width="3024"
+            height="3024"
+            class="fig-img"
+        /></a>
+        <figcaption class="caption">Baked Potato Soup</figcaption>
+      </figure>
+
+      <figure>
+        <a href="recipes/potatosoup.html"
+          ><img
+            src="../img/potatosoup.jpg"
+            alt="Baked Potato Soup"
+            width="3024"
+            height="3024"
+            class="fig-img"
+        /></a>
+        <figcaption class="caption">Baked Potato Soup</figcaption>
+      </figure>
+    </main>
   </body>
 </html>
