--- a/recipes/potatosoup.html
+++ b/recipes/potatosoup.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Baked Potato Soup</title>
+    <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
     <h1>Baked Potato Soup Recipe</h1>
