--- a/recipes/potatosoup.html
+++ b/recipes/potatosoup.html
@@ -8,57 +8,73 @@
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
-    <h1>Baked Potato Soup Recipe</h1>
-    <img
-      src="../img/potatosoup.jpg"
-      alt="Baked Potato Soup"
-      width="3024"
-      height="3024"
-    />
-    <h4>Baked Potato Soup</h4>
-    <p>
-      This baked potato soup is thick, creamy, and an excellent way to use
-      leftover baked potatoes.
-    </p>
-    <p>
-      Baked potato soup is the perfect hearty, filling, stick-to-your-bones
-      dinner for a cold winter's night. This baked potato soup recipe will
-      quickly become a family favorite.
-    </p>
-    <h3>Ingredients</h3>
-    <ul>
-      <li>12 slices bacon</li>
-      <li>⅔ cup butter or margarine</li>
-      <li>⅔ cup all-purpose flour</li>
-      <li>7 cups milk</li>
-      <li>4 large baked potatoes, peeled and cubed</li>
-      <li>4 green onions, chopped</li>
-      <li>1 ¼ cups shredded Cheddar cheese</li>
-      <li>1 cup sour cream</li>
-      <li>1 teaspoon salt</li>
-      <li>1 teaspoon ground black pepper</li>
-    </ul>
-    <h3>Steps</h3>
-    <ol>
-      <li>
-        Place bacon in a large skillet and cook over medium-high heat, turning
-        occasionally, until evenly browned, about 8 to 10 minutes. Drain bacon
-        slices on paper towels; crumble and set aside.
-      </li>
-      <li>
-        Meanwhile, melt butter in a stockpot or Dutch oven over medium heat.
-        Gradually add flour, whisking until well-combined. Slowly pour in milk,
-        whisking constantly until smooth and thickened.
-      </li>
-      <li>
-        Add potatoes and onions and bring to a boil, stirring frequently. Reduce
-        heat and simmer for 10 minutes.
-      </li>
-      <li>
-        Stir in crumbled bacon, Cheddar cheese, sour cream, salt, and pepper.
-        Continue cooking and stirring until cheese is melted.
-      </li>
-    </ol>
-    <a href="/">Home</a>
+    <h1 class="title">Baked Potato Soup Recipe</h1>
+    <main class="container">
+      <figure class="introduce">
+        <a href="recipes/potatosoup.html"
+          ><img
+            src="../img/potatosoup.jpg"
+            alt="Baked Potato Soup"
+            width="3024"
+            height="3024"
+            class="final-dishes"
+        /></a>
+        <figcaption class="caption">Baked Potato Soup</figcaption>
+      </figure>
+      <article class="explain">
+        <div>
+          <p>
+            This baked potato soup is thick, creamy, and an excellent way to use
+            leftover baked potatoes.
+          </p>
+          <p>
+            Baked potato soup is the perfect hearty, filling,
+            stick-to-your-bones dinner for a cold winter's night. This baked
+            potato soup recipe will quickly become a family favorite.
+          </p>
+        </div>
+        <div>
+          <h3>Ingredients</h3>
+          <ul>
+            <li>12 slices bacon</li>
+            <li>⅔ cup butter or margarine</li>
+            <li>⅔ cup all-purpose flour</li>
+            <li>7 cups milk</li>
+            <li>4 large baked potatoes, peeled and cubed</li>
+            <li>4 green onions, chopped</li>
+            <li>1 ¼ cups shredded Cheddar cheese</li>
+            <li>1 cup sour cream</li>
+            <li>1 teaspoon salt</li>
+            <li>1 teaspoon ground black pepper</li>
+          </ul>
+        </div>
+        <div>
+          <h3>Steps</h3>
+          <ol>
+            <li>
+              Place bacon in a large skillet and cook over medium-high heat,
+              turning occasionally, until evenly browned, about 8 to 10 minutes.
+              Drain bacon slices on paper towels; crumble and set aside.
+            </li>
+            <li>
+              Meanwhile, melt butter in a stockpot or Dutch oven over medium
+              heat. Gradually add flour, whisking until well-combined. Slowly
+              pour in milk, whisking constantly until smooth and thickened.
+            </li>
+            <li>
+              Add potatoes and onions and bring to a boil, stirring frequently.
+              Reduce heat and simmer for 10 minutes.
+            </li>
+            <li>
+              Stir in crumbled bacon, Cheddar cheese, sour cream, salt, and
+              pepper. Continue cooking and stirring until cheese is melted.
+            </li>
+          </ol>
+        </div>
+      </article>
+    </main>
+    <footer class="footer">
+      <a href="/">Home</a>
+    </footer>
   </body>
 </html>
