--- a/recipes/snowball.html
+++ b/recipes/snowball.html
@@ -8,7 +8,7 @@
     <title>SnowBall</title>
   </head>
   <body>
-    <h1>SnowBall Recipe</h1>
+    <h1 class="title">SnowBall Recipe</h1>
     <img src="../img/snowball.jpg" alt="SnowBall" width="3024" height="3024" />
     <h4>SnowBall</h4>
     <p>
