--- a/recipes/salad.html
+++ b/recipes/salad.html
@@ -8,7 +8,7 @@
     <title>Tropical Turkey Salad</title>
   </head>
   <body>
-    <h1>Tropical Turkey Salad Recipe</h1>
+    <h1 class="title">Tropical Turkey Salad Recipe</h1>
     <img
       src="../img/salad.jpg"
       alt="Tropical Turkey Salad"
