Edit img and footer

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <figure>
         <a href="recipes/salad.html"
           ><img
-            src="../img/salad.jpg"
+            src="./img/salad.jpg"
             alt="Tropical Turkey Salad"
             width="960"
             height="960"
@@ -25,7 +25,7 @@
       <figure>
         <a href="recipes/snowball.html"
           ><img
-            src="../img/snowball.jpg"
+            src="./img/snowball.jpg"
             alt="SnowBall"
             width="3024"
             height="3024"
@@ -37,7 +37,7 @@
       <figure>
         <a href="recipes/potatosoup.html"
           ><img
-            src="../img/potatosoup.jpg"
+            src="./img/potatosoup.jpg"
             alt="Baked Potato Soup"
             width="3024"
             height="3024"
