--- a/recipes/potatosoup.html
+++ b/recipes/potatosoup.html
@@ -74,7 +74,7 @@
       </article>
     </main>
     <footer class="footer">
-      <a href="/">Home</a>
+      <a href="../index.html">Home</a>
     </footer>
   </body>
 </html>
